--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,10 @@ jobs:
       - run:
           name: Publish to RubyGems
           command: |
-              mkdir -p $HOME/.gem
-              touch $HOME/.gem/credentials
-              chmod 0600 $HOME/.gem/credentials
-              printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+              mkdir -p ~/.gem
+              touch ~/.gem/credentials
+              chmod 0600 ~/.gem/credentials
+              printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > ~/.gem/credentials
               gem build *.gemspec
               gem push *.gem
           environment:
