--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
               mkdir -p ~/.gem
               touch ~/.gem/credentials
               chmod 0600 ~/.gem/credentials
-              printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > ~/.gem/credentials
+              printf -- "---\n:rubygems_api_key: ${RUBYGEMS_AUTH_TOKEN}\n" > ~/.gem/credentials
               gem build *.gemspec
               gem push *.gem
           environment:
