--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,16 +27,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Publish to RubyGems
+          name: Set up RubyGems credentials
+          command: echo -e "---\n:rubygems_api_key: $RUBYGEMS_AUTH_TOKEN" > ~/.gem/credentials && chmod 0600 ~/.gem/credentials
+      - run:
+          name: Build and push RubyGem
           command: |
-              mkdir -p ~/.gem
-              touch ~/.gem/credentials
-              chmod 0600 ~/.gem/credentials
-              printf -- "---\n:rubygems_api_key: ${RUBYGEMS_AUTH_TOKEN}\n" > ~/.gem/credentials
-              gem build *.gemspec
-              gem push *.gem
-          environment:
-            GEM_HOST_API_KEY: $RUBYGEMS_AUTH_TOKEN
+            gem build *.gemspec
+            gem push *.gem
 
 workflows:
   build_and_test:
