--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
               printf -- "---\n:rubygems_api_key: ${RUBYGEMS_AUTH_TOKEN}\n" > ~/.gem/credentials
               gem env --config-file ~/.gem/credentials
               gem build *.gemspec
-              gem push *.gem
+              gem push -v *.gem
           environment:
             GEM_HOST_API_KEY: $RUBYGEMS_AUTH_TOKEN
 
