--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ jobs:
               mkdir -p ~/.gem
               touch ~/.gem/credentials
               chmod 0600 ~/.gem/credentials
-              printf -- "---\n:rubygems_api_key: ${RUBYGEMS_AUTH_TOKEN}\n" > ~/.gem/credentials
+              printf -- "---\n:rubygems_api_key: ${RUBYGEMS_API_KEY}\n" > ~/.gem/credentials
               gem build *.gemspec
               gem push *.gem --config-file ~/.gem/credentials --norc -v
           environment:
-            GEM_HOST_API_KEY: $RUBYGEMS_AUTH_TOKEN
+            RUBYGEMS_API_KEY: $RUBYGEMS_AUTH_TOKEN
 
 workflows:
   build_and_test:
