--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 executors:
   default:
-    working_directory: ~/sdk
+    working_directory: ~/
     docker:
       - image: cimg/ruby:2.7
 
